# Nebulite

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gitmodules.bak  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GameEngine.sln  LICENSE.md  MAKEFILE  Makefile  OpenProject.sh  README.md  README.txt  TODO.txt  _GetAllCppFiles.sh  _OpenProject.bat  build.sh  compile.sh  depolyment-test.sh  install.sh  mingw-toolchain.cmake  requirements.txt  test  tests.json  winBuild.sh
.github/workflows/: build-test-and-lint.yml  clang-tidy.yml  test.yml
.recall/: Invoke.yaml  MainTree.yaml  Nebulite.yaml  RenderObjectTree.yaml  Renderobject.yaml  TaskFiles.yaml
.run/: Build Linux debug containerized.run.xml  Nebulite.run.xml
Application/: Benchmark.sh  CrashDebug.sh  CrashDebugExe.sh  Editor.sh  Game.sh  MemLeakTest.sh  Nebulite.sh  TestEnvironment.sh  TestMain.sh  Tests.sh  VertSlice.sh  _StartQtApp.sh  app  convert_syntax.py  crash_stacktrace.txt  global.log.jsonc  lastGlobalValues.json  massif_output.out  run_nebulite.bat  run_nebulite_debug.bat  spawntest.txt  task.txt  validate_json.sh
Application/Resources/: CrashDebugExe.sh  CreateResourcesDirectory.sh  CreateResourcesFolder.sh  _CreateResourcesFolder.sh
Application/TaskFiles/: benchmark_gravity.txt  crash_test.txt  echo_global_value.txt  gravity_classic.txt  gravity_goofy.txt  load-deload-exit.txt  obj_oob.txt  test.txt
Container/: build.py
Container/clang/: Containerfile
Container/gcc/: Containerfile
Container/mingw/: Containerfile
Editor/: Editor.cpp  LevelEditor.cpp
Editor/ExampleBuild/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorTab_LevelEditor.cpp  EditorTab_MoveRuleSetEditor.cpp  EditorTab_MoveRuleSetEditor.h  build.sh
Editor/QT/: ExplorerWidget.cpp  SliderWidget.cpp
Engine/: main.cpp
Engine/GameVars/: Basiswerte.h  Eigenschaften.h  InteractionRequirement.cpp  InteractionRequirement.h  Inventar.cpp  Inventar.h  Kreatur.h
Engine/Helper/: Calculator.cpp  Calculator.h  Console.cpp  Invoke.cpp  Invoke.h  JSONHandler.cpp  JSONHandler.h  NamenKonventionen.h  OptionsMenu.cpp  Time.cpp
Engine/Rendering/: Environment.cpp  Environment.h  MoveRuleSet.cpp  MoveRuleSet.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h
Languages/nebl/: ideas.md
Platform/: Platform.cpp  Platform.h
ProjectEditor/: Editor.cpp  Editor.h  LevelEditor.cpp  LevelEditor.h  ProjectEditor.filters  ProjectEditor.vcxproj  ProjectEditor.vcxproj.filters  main.cpp
ProjectEditor/ExampleBuild/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorAppMain.cpp  _ExampleMain.cpp  _ExampleWindow.cpp  _ExampleWindow.h  build.sh
ProjectEditor/QT/: ButtonWidget.cpp  ExplorerWidget.h  ImageWidget.cpp  ImageWidget.h  _ExampleWindow.h  captureRendererContentToQImage.h
ProjectEngine/: Basiswerte.cpp  Calculator.cpp  Eigenschaften.cpp  FileManagement.cpp  GameLoop.cpp  JSONHandler.cpp  MenueScreen.cpp  NamenKonventionen.cpp  Optionsloader.cpp  ProjectEngine.filters  ProjectEngine.vcxproj  ProjectEngine.vcxproj.filters  RenderObject.cpp  Renderer.cpp  Savegame.cpp  StringHandler.cpp  Talente.cpp  Time.cpp  Zauber.cpp  main.cpp  mainOLD.cpp
ProjectEngine/GameLoop/: GameLoop.cpp  GameLoop.h  OptionsLoader.cpp  OptionsLoader.h  Savegame.cpp  Savegame.h
ProjectEngine/GameVars/: Basiswerte.cpp  Basiswerte.h  Eigenschaften.cpp  Eigenschaften.h  InteractionRequirement.cpp  (+11 more)
ProjectTestEnvironment/: DsaDebug.cpp  DsaDebug.h  ProjectTestEnvironment.filters  ProjectTestEnvironment.vcxproj  ProjectTestEnvironment.vcxproj.filters  QuickNotes.cpp  TestEnv.cpp  TestEnv.h  _TEMPLATE_CLASS.cpp  _TEMPLATE_CLASS.h  main.cpp
Resources/: settings.jsonc
Scripts/: CrashDebug.sh  CrashDebugExe.sh  CreateResourcesDirectory.sh  CreateSelection.py  DeploymentTest.sh  MakeCommandDocumentation.py  MakeStandards.sh  MemLeakTest.sh  TestingSuite.py  Tests.py  Tests.sh  calcJobs.sh  commitTestPipeline.sh  createChangelogList.sh  createRelease.sh  create_release.sh  installPythonPackages.sh  installSystemPackages.sh  install_dependencies.sh  loop.sh  make_gif.py  switchToSDL3.sh  validate_error_usage.py  validate_json.py  validate_json.sh
Tests/: Milestones.cpp  TestEnv.cpp  TestEnv.h  _TEMPLATE_CLASS.cpp
Tools/: cloc_lang_define.txt  tests.json  tests.jsonc
Unimplemented/: GDM_Audio.hpp  GDM_Communication.hpp  GDM_GUI.cpp  GDM_GUI.hpp  GDM_InputMapping.hpp  GDM_StateManagement.cpp  GDM_StateManagement.hpp  RDM_Layout.cpp  RDM_Layout.hpp  RDM_Parenting.hpp
_OLD/: JSON.cpp  JSON.hpp
_OLD_FTREES/: GlobalSpaceTree.cpp  RenderObjectTree.cpp  RenderObjectTree.hpp
_QT_SDL_TEST/: CMakeLists.txt  build.sh
_QT_SDL_TEST/src/: ButtonWidget.h  ExplorerWidget.cpp  MainWindow.cpp  MainWindow.h  SliderWidget.cpp  SliderWidget.h  main.cpp
_QT_SDL_TEST_REFACTORED/: CMakeLists.txt
_TestMain/: main.cpp
doc/: CommandDocumentation.md  Commands.md  Coverage.md  Defines.md  Dictionary.md  Glossary.md  RmlUi.md  invoke.plantuml  main.plantuml
golang-test/: go.mod  main.go
include/: Assignment.h  DocumentCache.h  Environment.h  ErrorTypes.h  Expression.h  ExpressionPool.h  FileManagement.h  FuncTree.h  FuncTreeExpansionWrapper.h  FuncTreeWrapper.h  GTE_Audio.h  GTE_Communication.h  GTE_Debug.h  GTE_GUI.h  GTE_General.h  GTE_InputMapping.h  GTE_RNG.h  GTE_RenderObjectDraft.h  GTE_Renderer.h  GlobalSpace.h  GlobalSpaceTree.h  Invoke.h  InvokeEntry.h  InvokeExpression.h  InvokeExpressionParser.h  InvokeExpressionPool.h  InvokeJSONParser.h  InvokeNode.h  JSON.h  JSONTree.h  JTE_ComplexData.h  JTE_SimpleData.h  JT_ExpansionWrapper.h  KeyNames.h  MTE_Debug.h  MTE_General.h  MTE_Renderer.h  MT_Debug.h  MT_ExpansionWrapper.h  MT_General.h  (+23 more)
nebulite-logic-vscode/: ideas.md
nebulite-script-vscode/: .gitignore  LICENSE.md  Nebulite-color-theme.json  README.md  build-and-install.sh  cloc_lang_define.txt  concept.md  extract_function_names.py  language-configuration.json  nebulite-script-language-0.0.1.vsix  package-lock.jsonc  package.json  repository.json
scripts/: make_gif.py
src/: Nebulite.cpp  ScopeAccessor.cpp  main.cpp
web/: go.mod  main.go
(+1709 files in other folders)
